--- a/index.html
+++ b/index.html
@@ -15,33 +15,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markup-hw-03</title>
+    <title>Markup-hw-04</title>
   </head>
   <body>
     <!-- Head of site -->
     <header class="header-line">
-      <div class="container">
-        <div class="header-container">
-          <a class="logo-link link" href="/index.html"
-            >Web<span class="logo-header">Studio</span></a
-          >
-          <!-- Links-->
-
-          <nav class="header-nav">
-            <ul class="nav-list list">
-              <li><a class="link-nav link current" href="./index.html">Студія</a></li>
-              <li><a class="link-nav link" href="./portfolio.html">Портфоліо</a></li>
-              <li><a class="link-nav link" href="#">Контакти</a></li>
-            </ul>
-          </nav>
-
-          <ul class="contact-list list">
-            <li>
-              <a class="mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <div class="container header-container">
+        <a class="logo-link link" href="/index.html">Web<span class="logo-header">Studio</span></a>
+        <!-- Links-->
+        <nav class="header-nav">
+          <ul class="nav-list list">
+            <li><a class="link-nav link current" href="./index.html">Студія</a></li>
+            <li><a class="link-nav link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="link-nav link" href="#">Контакти</a></li>
           </ul>
-        </div>
+        </nav>
+        <ul class="contact-list list">
+          <li>
+            <a class="mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </div>
     </header>
     <main>
@@ -136,7 +130,7 @@
         <a class="logo-link link" href="/index.html">Web<span class="logo-footer">Studio</span></a>
         <address class="address">
           <ul class="address-footer list">
-            <li>
+            <li class="address-item">
               <a
                 class="address-map link"
                 href="https://goo.gl/maps/CgqQX7eJWSS4vk4c6"
@@ -145,10 +139,12 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a class="mailto-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li><a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="address-item">
+              <a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
