--- a/portfolio.html
+++ b/portfolio.html
@@ -15,38 +15,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Markup-hw-03</title>
+    <title>Markup-hw-04</title>
   </head>
   <body>
     <!-- Head of site -->
     <header class="header-line">
-      <div class="container">
-        <div class="header-container">
-          <a class="logo-link link" href="/index.html"
-            >Web<span class="logo-header">Studio</span></a
-          >
-          <!-- Links-->
-
-          <nav class="header-nav">
-            <ul class="nav-list list">
-              <li><a class="link-nav link" href="./index.html">Студія</a></li>
-              <li><a class="link-nav link current" href="./portfolio.html">Портфоліо</a></li>
-              <li><a class="link-nav link" href="#">Контакти</a></li>
-            </ul>
-          </nav>
-
-          <ul class="contact-list list">
-            <li>
-              <a class="mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <div class="container header-container">
+        <a class="logo-link link" href="/index.html">Web<span class="logo-header">Studio</span></a>
+        <!-- Links-->
+        <nav class="header-nav">
+          <ul class="nav-list list">
+            <li><a class="link-nav link" href="./index.html">Студія</a></li>
+            <li><a class="link-nav link current" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="link-nav link" href="#">Контакти</a></li>
           </ul>
-        </div>
+        </nav>
+
+        <ul class="contact-list list">
+          <li>
+            <a class="mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </div>
     </header>
-    <main class="section">
+    <main>
       <!-- filter btn -->
-      <section class="nav-portfolio">
+      <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Навігація</h1>
           <ul class="portfolio-flex list">
@@ -56,70 +51,68 @@
             <li><button class="filter-button btn">Дизайн</button></li>
             <li><button class="filter-button btn">Маркетинг</button></li>
           </ul>
-
           <!-- projects -->
-
           <ul class="projects-flex list">
             <li>
               <img src="./images/techno.jpg" alt="Techno" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Технокряк</h3>
+                <h2 class="name-project">Технокряк</h3>
                 <p class="text-project">Веб-сайт</p>
               </div>
             </li>
             <li>
               <img src="./images/golden.jpg" alt="golden" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Постер New Orlean vs Golden Star</h3>
+                <h2 class="name-project">Постер New Orlean vs Golden Star</h3>
                 <p class="text-project">Дизайн</p>
               </div>
             </li>
             <li>
               <img src="./images/saefood.jpg" alt="saefood" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Ресторан Seafood</h3>
+                <h2 class="name-project">Ресторан Seafood</h3>
                 <p class="text-project">Додаток</p>
               </div>
             </li>
             <li>
               <img src="./images/prime.jpg" alt="prime" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Проєкт Prime</h3>
+                <h2 class="name-project">Проєкт Prime</h3>
                 <p class="text-project">Маркетинг</p>
               </div>
             </li>
             <li>
               <img src="./images/boxes.jpg" alt="boxes" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Проєкт Boxes</h3>
+                <h2 class="name-project">Проєкт Boxes</h3>
                 <p class="text-project">Додаток</p>
               </div>
             </li>
             <li>
               <img src="./images/borders.jpg" alt="borders" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Inspiration has no Borders</h3>
+                <h2 class="name-project">Inspiration has no Borders</h3>
                 <p class="text-project">Веб-сайт</p>
               </div>
             </li>
             <li>
               <img src="./images/edition.jpg" alt="edition" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Видання Limited Edition</h3>
+                <h2 class="name-project">Видання Limited Edition</h3>
                 <p class="text-project">Дизайн</p>
               </div>
             </li>
             <li>
               <img src="./images/lab.jpg" alt="lab" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Проєкт LAB</h3>
+                <h2 class="name-project">Проєкт LAB</h3>
                 <p class="text-project">Маркетинг</p>
               </div>
             </li>
             <li>
               <img src="./images/business.jpg" alt="b" width="370" />
               <div class="title-project">
-                <h3 class="name-project">Growing Business</h3>
+                <h2 class="name-project">Growing Business</h3>
                 <p class="text-project">Product Designer</p>
               </div>
             </li>
@@ -133,7 +126,7 @@
         <a class="logo-link link" href="/index.html">Web<span class="logo-footer">Studio</span></a>
         <address class="address">
           <ul class="address-footer list">
-            <li>
+            <li class="address-item">
               <a
                 class="address-map link"
                 href="https://goo.gl/maps/CgqQX7eJWSS4vk4c6"
@@ -142,10 +135,12 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a class="mailto-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li><a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="address-item">
+              <a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
