--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,21 @@
 
         <ul class="contact-list list">
           <li>
-            <a class="mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mailto" href="mailto:info@devstudio.com">
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
-          <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="tel" href="tel:+380961111111">
+              <svg class="tel-icon" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -53,66 +65,66 @@
           </ul>
           <!-- projects -->
           <ul class="projects-flex list">
-            <li>
+            <li class="container-bg">
               <img src="./images/techno.jpg" alt="Techno" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Технокряк</h3>
+                <h2 class="name-project">Технокряк</h2>
                 <p class="text-project">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="container-bg">
               <img src="./images/golden.jpg" alt="golden" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Постер New Orlean vs Golden Star</h3>
+                <h2 class="name-project">Постер New Orlean vs Golden Star</h2>
                 <p class="text-project">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="container-bg">
               <img src="./images/saefood.jpg" alt="saefood" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Ресторан Seafood</h3>
+                <h2 class="name-project">Ресторан Seafood</h2>
                 <p class="text-project">Додаток</p>
               </div>
             </li>
-            <li>
+            <li class="container-bg">
               <img src="./images/prime.jpg" alt="prime" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Проєкт Prime</h3>
+                <h2 class="name-project">Проєкт Prime</h2>
                 <p class="text-project">Маркетинг</p>
               </div>
             </li>
-            <li>
+            <li class="container-bg">
               <img src="./images/boxes.jpg" alt="boxes" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Проєкт Boxes</h3>
+                <h2 class="name-project">Проєкт Boxes</h2>
                 <p class="text-project">Додаток</p>
               </div>
             </li>
-            <li>
+            <li class="container-bg">
               <img src="./images/borders.jpg" alt="borders" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Inspiration has no Borders</h3>
+                <h2 class="name-project">Inspiration has no Borders</h2>
                 <p class="text-project">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="container-bg">
               <img src="./images/edition.jpg" alt="edition" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Видання Limited Edition</h3>
+                <h2 class="name-project">Видання Limited Edition</h2>
                 <p class="text-project">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="container-bg">
               <img src="./images/lab.jpg" alt="lab" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Проєкт LAB</h3>
+                <h2 class="name-project">Проєкт LAB</h2>
                 <p class="text-project">Маркетинг</p>
               </div>
             </li>
-            <li>
-              <img src="./images/business.jpg" alt="b" width="370" />
+            <li class="container-bg">
+              <img src="./images/business.jpg" alt="lab" width="370" />
               <div class="title-project">
-                <h2 class="name-project">Growing Business</h3>
+                <h2 class="name-project">Growing Business</h2>
                 <p class="text-project">Product Designer</p>
               </div>
             </li>
@@ -122,27 +134,90 @@
     </main>
     <!--footer  -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-link link" href="/index.html">Web<span class="logo-footer">Studio</span></a>
-        <address class="address">
-          <ul class="address-footer list">
-            <li class="address-item">
+      <div class="container footer-container">
+        <div class="address-flex">
+          <a class="logo-link link" href="/index.html"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <address class="address">
+            <ul class="address-footer list">
+              <li class="address-item">
+                <a
+                  class="address-map link"
+                  href="https://goo.gl/maps/CgqQX7eJWSS4vk4c6"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="mailto-footer link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join-footer">
+          <h3 class="join-title-footer">приєднуйтесь</h3>
+          <ul class="socials-footer list">
+            <li class="socials-item-footer">
               <a
-                class="address-map link"
-                href="https://goo.gl/maps/CgqQX7eJWSS4vk4c6"
+                class="socials-link-footer link"
+                href="https://instagram.com"
                 target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                rel="nofollow noopener noreferrer"
+                aria-label="Instagram"
               >
+                <svg class="socials-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="mailto-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="socials-item-footer">
+              <a
+                class="socials-link-footer link"
+                href="https://twitter.com"
+                aria-label="Twitter"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+              >
+                <svg class="socials-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a class="tel-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="socials-item-footer">
+              <a
+                class="socials-link-footer link"
+                href="https://facebook.com"
+                aria-label="Facebook"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+              >
+                <svg class="socials-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item-footer">
+              <a
+                class="socials-link-footer link"
+                href="https://linkedin.com"
+                aria-label="LinkedIn"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+              >
+                <svg class="socials-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
