--- a/portfolio.html
+++ b/portfolio.html
@@ -65,68 +65,131 @@
           </ul>
           <!-- projects -->
           <ul class="projects-flex list">
-            <li class="container-bg">
-              <img src="./images/techno.jpg" alt="Techno" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Технокряк</h2>
-                <p class="text-project">Веб-сайт</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/techno.jpg" alt="Techno" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Технокряк</h2>
+                  <p class="text-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/golden.jpg" alt="golden" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Постер New Orlean vs Golden Star</h2>
-                <p class="text-project">Дизайн</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/golden.jpg" alt="golden" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Постер New Orlean vs Golden Star</h2>
+                  <p class="text-project">Дизайн</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/saefood.jpg" alt="saefood" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Ресторан Seafood</h2>
-                <p class="text-project">Додаток</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/saefood.jpg" alt="saefood" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Ресторан Seafood</h2>
+                  <p class="text-project">Додаток</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/prime.jpg" alt="prime" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Проєкт Prime</h2>
-                <p class="text-project">Маркетинг</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/prime.jpg" alt="prime" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Проєкт Prime</h2>
+                  <p class="text-project">Маркетинг</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/boxes.jpg" alt="boxes" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Проєкт Boxes</h2>
-                <p class="text-project">Додаток</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/boxes.jpg" alt="boxes" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Проєкт Boxes</h2>
+                  <p class="text-project">Додаток</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/borders.jpg" alt="borders" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Inspiration has no Borders</h2>
-                <p class="text-project">Веб-сайт</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/borders.jpg" alt="borders" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Inspiration has no Borders</h2>
+                  <p class="text-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/edition.jpg" alt="edition" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Видання Limited Edition</h2>
-                <p class="text-project">Дизайн</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/edition.jpg" alt="edition" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Видання Limited Edition</h2>
+                  <p class="text-project">Дизайн</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/lab.jpg" alt="lab" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Проєкт LAB</h2>
-                <p class="text-project">Маркетинг</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/lab.jpg" alt="lab" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Проєкт LAB</h2>
+                  <p class="text-project">Маркетинг</p>
+                </div>
+              </a>
             </li>
-            <li class="container-bg">
-              <img src="./images/business.jpg" alt="lab" width="370" />
-              <div class="title-project">
-                <h2 class="name-project">Growing Business</h2>
-                <p class="text-project">Product Designer</p>
-              </div>
+            <li>
+              <a
+                class="container-bg link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img src="./images/business.jpg" alt="lab" width="370" />
+                <div class="title-project">
+                  <h2 class="name-project">Growing Business</h2>
+                  <p class="text-project">Product Designer</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
